--- a/app/globals.css
+++ b/app/globals.css
@@ -18,14 +18,13 @@
 
 body {
   margin: 0;
-  color:#111;
+  background: #111;
+  color:#fff;
   height: 100vh;
   width: 100vw;
+  overflow-x: hidden;
 }
 
-main{
-  background: linear-gradient(to bottom, #101, #000);
-}
 
 h1,h2{
   font-weight:bolder;
@@ -33,4 +32,59 @@ h1,h2{
 
 p{
   margin:1em 0em;
+}
+
+.video-container {
+  position: fixed;
+  top:0;
+  height:auto;
+  width: 100vw;
+  z-index:-100;
+}
+
+.video-container video {
+  width: 100vw;
+  height: auto;
+  object-fit: cover;
+}
+
+.mobile-video-container {
+  display:none;
+}
+
+.mobile-video-container video {
+  display:none;
+}
+
+.cursor-pointer{
+  cursor:pointer;
+}
+
+@media (max-width:720px){
+  .video-container {
+    display:none;
+  }
+  
+  .video-container video {
+    display:none;
+  }
+
+  .mobile-video-container {
+    display:block;
+    position:fixed;
+    object-fit: cover;
+    top:0;
+    height:100vh;
+    width: 100%;
+    z-index:-1;
+  }
+  
+  .mobile-video-container video {
+    display:block;
+    width: 100%;
+    height: 100vh;
+    object-fit:contain;
+  }
+  
+  
 }
