--- a/app/globals.css
+++ b/app/globals.css
@@ -25,6 +25,8 @@ body {
   overflow-x: hidden;
 }
 
+::-webkit-scrollbar{width:10px;background:#111;border-radius:10px;}::-webkit-scrollbar-thumb{border-radius:10px;background-color:#000;border-radius:10px}::-webkit-scrollbar-thumb:hover{background-color:#333}
+
 
 h1,h2{
   font-weight:bolder;
